[package]
name = "calr"
version = "0.1.0"
edition = "2021"
description = "Rust cal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.79"
chrono = "0.4.32"
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.0"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
